src/components/Home/EventBanner.scss
.eventBanner {
  background: #05422c;
  display: flex;
  width: 100%;
  padding: 8px 0px;
  justify-content: center;
  align-items: center;
  gap: 16px;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  .description {
    color: #ffffffb2;
  }
  .timeLeft {
    color: #ffffff;
  }
}
@media screen and (min-width: 1440px) {
}
@media screen and (max-width: 500px) {
  .eventBanner {
    padding: 8px 24px;
    gap: 16px;
    font-size: 12px;
    .description {
      max-width: calc(100% - 60px - 24px - 16px);
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }
}

